--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "author": "stevenbdf@gmail.com",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "1.19.0",
+    "cors": "^2.8.5",
     "express": "4.17.1",
     "express-myconnection": "1.0.4",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "1.9.1",
     "mysql": "2.17.1"
   },
